# kpr

./: .envrc.sample  .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: cmd.rs  config.rs  lib.rs  main.rs  util.rs
cli/src/cmd/: contest.rs  expand.rs  fetch.rs  init.rs  langs.rs  login.rs  logout.rs  root.rs  shojin.rs  submit.rs  test.rs
core/: Cargo.toml
core/examples/assets/: kpr-repository.toml  kpr.toml
core/src/: action.rs  client.rs  collections.rs  color.rs  config.rs  fsutil.rs  interactive.rs  lib.rs  repository.rs  serdable.rs  storage.rs  str_interp.rs  style.rs  testing.rs
core/src/storage/: authtoken.rs  error.rs  mod.rs  problem.rs  repository.rs  util.rs  vault.rs  workspace.rs
core/src/testing/: result.rs  runner.rs  testcase.rs
expander/: Cargo.toml
expander/src/: cpp.rs  errors.rs  lib.rs
expander/src/cpp/: assets.rs  expander.rs
fsutil/: Cargo.toml
fsutil/src/: lib.rs
kpr/: Cargo.toml
kpr/src/: client.rs  cmd.rs  config.rs  lib.rs  main.rs  util.rs
kpr/src/cmd/: contest.rs  fetch.rs  init.rs  login.rs  logout.rs  shojin.rs  test.rs
serdable/: Cargo.toml
serdable/src/: glob.rs  lib.rs
src/: client.rs  cmd.rs  config.rs  lib.rs  subcmd.rs  testconfig.rs  ui.rs  util.rs
src/client/: atcoder.rs  atcoder_test.rs  common.rs
src/cmd/: login.rs  logout.rs
src/subcmd/: login.rs
webclient/: Cargo.toml
webclient/src/: atcoder.rs  error.rs  http.rs  lib.rs  model.rs  util.rs
webclient/src/atcoder/: auth.rs  client.rs  helper.rs  mod.rs  urls.rs
webclient/src/model/: atom.rs  contents.rs  credential.rs  global_id.rs  problem_id.rs
webclient/tests/: atcoder.rs  testconfig.rs
