[package]
name = "kyopro-cli"
version = "0.1.0"
edition = "2021"
default-run = "kpr"
authors = ["Arumakan1727"]
description = """
CLI tool for Competitive Programming.
It can download testcases, login, submit, and manage workspace for coding, etc. \
"""

[[bin]]
name = "kpr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
cookie = "0.17.0"
dialoguer = "0.10.4"
dirs = "5.0.1"
envy = "0.4.2"
futures = "0.3.28"
lazy-regex = "2.5.0"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["cookies"] }
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.3"
