[workspace]
members = [
  "cli",
  "core",
  "webclient",
  "fsutil",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
authors = ["Arumakan1727"]
edition = "2021"
repository = "https://github.com/arumakan1727/kyopro-cli"

[workspace.dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
colored = "2"
cookie = "0.17.0"
dialoguer = "0.10.4"
dirs = "5.0.1"
env_logger = "0.10.0"
envy = "0.4.2"
glob = "0.3.1"
lazy-regex = "2.5.0"
log = "0.4.18"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["cookies"] }
rust-embed = "6.6.1"
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "process", "fs"] }
toml = "0.7.3"
url = { version = "2.3.1", features = ["serde"] }
