[package]
name = "kpr-expander"
version = "0.1.0"
description = """
Source code expander library (expands `#include`)
"""
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsutil = { path = "../fsutil/" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
glob = { workspace = true }
lazy-regex = { workspace = true }
log = { workspace = true }
maplit = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
