[package]
name = "kpr"
version = "0.1.0"
description = """
CLI tool for Competitive Programming.
It can download testcases, login, submit, and manage workspace for coding, etc. \
"""
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kpr"
path = "src/main.rs"

[dependencies]
kpr-core = { path = "../core" }
kpr-webclient = { path = "../webclient/" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = {  workspace = true }
dirs = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
lazy-regex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
